# AutoBidder

./: .env.example  .gitignore  .markdownlint.json  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICK_START.md  README.md  RESTART_GUIDE.md  SECURITY.md  docker-compose.yml
.cursor/: mcp.json
.cursor/rules/: nextjs.mdc  python-best-practices.mdc  python-llm.mdc  specify-rules.mdc
.github/agents/: copilot-instructions.md
assets/images/: README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: proposals.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  errors.py  logging.py  middleware.py
backend/app/etl/: freelancer_loader.py  hf_loader.py  scheduler.py
backend/app/models/: ai.py  analytics.py  auth.py  autonomy.py  draft.py  project.py  proposal.py  schemas.py  session_state.py
backend/app/routers/: analytics.py  auth.py  autonomous.py  draft.py  etl.py  health.py  keywords.py  projects.py  proposals.py  session.py  settings.py  strategies.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  auto_proposal_service.py  autonomy_settings_service.py  conflict_resolver.py  document_service.py  draft_manager.py  hf_job_source.py  job_service.py  keyword_service.py  llama_service.py  notification_service.py  profile_service.py  project_service.py  proposal_quality_service.py  proposal_service.py  qualification_service.py  session_manager.py  settings_service.py  strategy_service.py  supabase_client.py  vector_store.py
backend/app/tasks/: __init__.py  autonomous_tasks.py
backend/scripts/: hf_etl.py  run_migrations.py
backend/tests/: test_api.py
backend/tests/integration/: test_autonomous_flow.py  test_chromadb_hybrid.py
backend/tests/unit/services/: test_auto_proposal_service.py  test_qualification_service.py
database/migrations/: 000_local_auth_setup.sql  001_initial_schema.sql  002_rls_policies.sql  003_biddinghub_merge.sql  004_workflow_optimization.sql  006_custom_auth_users.sql  010_autonomous_settings.sql  011_refactor_jobs_to_projects.sql  016_remove_scoring_artifacts.sql
database/seed/: dev_data.sql
docs/: 005-refactor-implementation-summary.md  ARCHITECTURE_DIAGRAM.md  DOCUMENTATION_REORGANIZATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  MERGE_AND_UPGRADE_PLAN.md  NEXT_STEPS.md  QUICKSTART.md  README.md  RESTART_GUIDE.md  SESSION_SUMMARY.md  SETUP_AUTH.md  START_HERE.md  analytics.md  auto-bidder.md  auto-bidder_production_saas_plan.md  autonomous-automation-strategy.md  chromadb.md  dashboard.md  database-schema-reference.md  email-system.md  huggingface-job-discovery.md  implementation.md  keywords.md  knowledge-base.md  projects.md  proposals.md  railway-deployment-guide.md  settings.md  setup-and-run.md  setup-auth.md  strategies.md  user-guides.md  workflow-optimization-summary.md
docs/1-getting-started/: QUICKSTART.md
docs/2-architecture/: ARCHITECTURE_DIAGRAM.md  MASTER_PLAN.md
docs/3-guides/: IMPLEMENTATION_STRATEGY.md  PRODUCTION_DEPLOYMENT.md
docs/4-status/: PROGRESS.md
docs/5-specs/: 001-workflow-clarifications.md
docs/diagrams/: README.md  architecture-diagram.md  auth-flow-diagram.md  (+2 more)
frontend/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
scripts/: quick-start-merge.sh  screenshot_pages.py
supabase/: config.toml
(+84 files in other folders)
